Rename makeRequest function

--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,7 @@
     </b>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
-     function makeRequest(endpoint, data) {
+     function apiRequest(endpoint, data) {
        console.log("Making request ...");
        $.ajax({
          // Where are we sending the data?
